a few changes to the about-us page

--- a/about_us.html
+++ b/about_us.html
@@ -86,6 +86,7 @@
                               </ul>
                          </div>
                     </div>
+                    <p><strong><center>Dillon Gage is comprised of over a hundred employess in Addison, Texas, New Castle, Delaware, Ontario, Canada and Los Angeles, California. Last year, the Dillon Gage Companies had over 2 billion dollars in sales.</center></strong></p>
                </div>
           </section>
           <section class="twitter_feed_wrapper skincolored_section">
@@ -117,7 +118,7 @@
                                    </li>
                                    <li class="item">
                                         <blockquote>
-                                             <p><strong><i>"If investing is entertaining, if you’re having fun, you’re probably not making any money. Good investing is boring." <br> -George Soros</i></strong></p>
+                                             <p><strong><i>"If investing is entertaining, if youâ€™re having fun, youâ€™re probably not making any money. Good investing is boring." <br> -George Soros</i></strong></p>
                                         </blockquote>
                                    </li>
                                    <li class="item">
@@ -142,7 +143,7 @@
                                    </li>
                                    <li class="item">
                                         <blockquote>
-                                             <p><strong><i>"It's not how much money you make, but how much money you keep, how hard it works for you, and how many generations you keep it for."<br> –Benjamin Franklin</i></strong></p>
+                                             <p><strong><i>"It's not how much money you make, but how much money you keep, how hard it works for you, and how many generations you keep it for."<br> â€“Benjamin Franklin</i></strong></p>
                                         </blockquote>
                                    </li>
                               </ul>
@@ -158,7 +159,8 @@
                     <div class="square-right"></div>
                </div>
                <div class="container">
-                    <h2 class="section_header fancy centered">Meet our Team...</h2>
+                    <h2 class="section_header fancy centered">Meet Dillon Gage's Senior Wealth Managers</h2>
+                    <p><strong><center>Dillon Gage is comprised of over a hundred employess in Addison, Texas, New Castle, Delaware, Ontario, Canada and Los Angeles, California. Last year, the Dillon Gage Companies had over 2 billion dollars in sales.</center></strong></p>
                     <div class="row">
                          <div class="col-sm-6 col-md-3">
                               <div class="team_member">
@@ -197,7 +199,7 @@
                                    <small>Director of Commodity Trading</small>
                                    <hr>
                                    <div class="team_social"><a href="https://www.linkedin.com/pub/phil-storer/12/838/226"><i class="fa fa-linkedin"></i></a> </div>
-                                   <p class="short_bio">Phil has just published his second book, Chalk Talks for Traders – Easy Xs and Os from a Proven Market Pro, aimed at helping individual investors become successful traders. </p>
+                                   <p class="short_bio">Phil has just published his second book, Chalk Talks for Traders â€“ Easy Xs and Os from a Proven Market Pro, aimed at helping individual investors become successful traders. </p>
                               </div>
                          </div>
                     </div>
@@ -239,7 +241,7 @@
                                         <li><a href="about_us.html">About Us</a></li>
                                         <li><a href="services.html">Services</a></li>
                                         <li><a href="dg-companies.html">Dillon Gage Companies</a></li>
-                                        <li><a href="contact.html">Contact</a></li>  
+                                        <li><a href="contact.html">Contact</a></li>
                                    </ul>
                               </div>
                          </div>
@@ -251,7 +253,7 @@
                          <center>
                          <strong>
                          Copyright &copy;2014 Dillon Gage Wealth Management all rights reserved <br>
-                         Before investing in any product, consider your investing goals, time horizon, and risk tolerance, and the product’s investment objectives, options, risks, charges, and expenses. Contact us for the product’s prospectus (or equivalent document) and read it carefully. Past performance is not indicative of future results. There is always a risk of loss when investing in securities. Investment products are not guaranteed or insured by the Federal Deposit Insurance Corporation. The information on this site was drawn from sources considered reliable, but their accuracy and completeness is not guaranteed. We are not responsible for the content of any non-Dillon Gage websites linked to from this website. Nothing on this website may be construed as a recommendation to buy or sell any particular investment product, or as a solicitation of business outside the state of Texas. Fee-based products and services are offered by Dillon Gage Private Wealth Management, a service mark of Dillon Gage Securities, Inc., a registered investment advisor in the state of Texas. Insurance products are offered by Dillon Gage Insurance Servuces Inc., a service mark of Dillon Gage Securities, Inc., an insurance agency in the state of Texas. Brokerage products are offered by Dillon Gage Securities, Inc., a broker-dealer, Member FINRA, SIPC.</strong>
+                         Before investing in any product, consider your investing goals, time horizon, and risk tolerance, and the productâ€™s investment objectives, options, risks, charges, and expenses. Contact us for the productâ€™s prospectus (or equivalent document) and read it carefully. Past performance is not indicative of future results. There is always a risk of loss when investing in securities. Investment products are not guaranteed or insured by the Federal Deposit Insurance Corporation. The information on this site was drawn from sources considered reliable, but their accuracy and completeness is not guaranteed. We are not responsible for the content of any non-Dillon Gage websites linked to from this website. Nothing on this website may be construed as a recommendation to buy or sell any particular investment product, or as a solicitation of business outside the state of Texas. Fee-based products and services are offered by Dillon Gage Private Wealth Management, a service mark of Dillon Gage Securities, Inc., a registered investment advisor in the state of Texas. Insurance products are offered by Dillon Gage Insurance Servuces Inc., a service mark of Dillon Gage Securities, Inc., an insurance agency in the state of Texas. Brokerage products are offered by Dillon Gage Securities, Inc., a broker-dealer, Member FINRA, SIPC.</strong>
                          </center>
                          </div>
                     </div>
@@ -274,7 +276,7 @@
      <script type="text/javascript" src="js/contact_form.js"></script>
      <script type="text/javascript" src="js/collapser.js"></script>
      <script src="http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.1.3.min.js"></script>
-     
+
 </div>
 </body>
 </html>
