--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                               <div class="carousel-caption animated bounceInUp">
                                    <h1><strong>World Class Money Managers<br>
                                         you can trust</strong></h1>
-                                   <p class="lead skincolored"><strong>At Dillon Gage Wealth Management, our advisors have a minimum of over 20 years experience in financial services.</strong></p> 
+                                   <p class="lead skincolored"><strong>At Dillon Gage Wealth Management, our advisors have a minimum of over 20 years experience in financial services.</strong></p>
                               </div>
                          </div>
                     <li class="item" style="background-image: url(images/dallas-sunset.jpg)">
@@ -195,7 +195,7 @@
                                         <li><a href="about_us.html">About Us</a></li>
                                         <li><a href="services.html">Services</a></li>
                                         <li><a href="dg-companies.html">Dillon Gage Companies</a></li>
-                                        <li><a href="contact.html">Contact</a></li>  
+                                        <li><a href="contact.html">Contact</a></li>
                                    </ul>
                               </div>
                          </div>
@@ -207,7 +207,7 @@
                          <center>
                          <strong>
                          Copyright &copy;2014 Dillon Gage Wealth Management all rights reserved <br>
-                         Before investing in any product, consider your investing goals, time horizon, and risk tolerance, and the product’s investment objectives, options, risks, charges, and expenses. Contact us for the product’s prospectus (or equivalent document) and read it carefully. Past performance is not indicative of future results. There is always a risk of loss when investing in securities. Investment products are not guaranteed or insured by the Federal Deposit Insurance Corporation. The information on this site was drawn from sources considered reliable, but their accuracy and completeness is not guaranteed. We are not responsible for the content of any non-Dillon Gage websites linked to from this website. Nothing on this website may be construed as a recommendation to buy or sell any particular investment product, or as a solicitation of business outside the state of Texas. Fee-based products and services are offered by Dillon Gage Private Wealth Management, a service mark of Dillon Gage Securities, Inc., a registered investment advisor in the state of Texas. Insurance products are offered by Dillon Gage Insurance Servuces Inc., a service mark of Dillon Gage Securities, Inc., an insurance agency in the state of Texas. Brokerage products are offered by Dillon Gage Securities, Inc., a broker-dealer, Member FINRA, SIPC.</strong>
+                         Before investing in any product, consider your investing goals, time horizon, and risk tolerance, and the product’s investment objectives, options, risks, charges, and expenses. Contact us for the product’s prospectus (or equivalent document) and read it carefully. Past performance is not indicative of future results. There is always a risk of loss when investing in securities. Investment products are not guaranteed or insured by the Federal Deposit Insurance Corporation. The information on this site was drawn from sources considered reliable, but their accuracy and completeness is not guaranteed. We are not responsible for the content of any non-Dillon Gage websites linked to from this website. Nothing on this website may be construed as a recommendation to buy or sell any particular investment product, or as a solicitation of business outside the state of Texas. Fee-based products and services are offered by Dillon Gage Private Wealth Management, a service mark of Dillon Gage Securities, Inc., a registered investment advisor in the state of Texas. Insurance products are offered by Dillon Gage Insurance Servuces Inc., a service mark of Dillon Gage Securities, Inc., an insurance agency in the state of Texas. Brokerage products are offered by Dillon Gage Securities, Inc., a broker-dealer, Member <a href="http://www.finra.org/">FINRA</a>, <a href="http://www.sipc.org">SIPC</a>.</strong>
                          </center>
                          </div>
                     </div>
@@ -230,7 +230,7 @@
      <script type="text/javascript" src="js/contact_form.js"></script>
      <script type="text/javascript" src="js/collapser.js"></script>
      <script src="http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.1.3.min.js"></script>
-     
+
 </div>
 </body>
 </html>
