--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
                          <li class="active"><a href="services.html">Services</a></li>
                          <li><a href="dg-companies.html">Dillon Gage Companies</a></li>
                          <li><a href="contact.html">Contact</a></li>
-                    </ul>     
+                    </ul>
                     </div>
                <div class="triangle-up-left"></div>
                <div class="triangle-up-right"></div>
@@ -78,7 +78,7 @@
                     <div class="row">
                          <div class="col-md-6">
                               <h3><strong>Custom Portfolio Design</strong></h3>
-                              <p><strong>Dillon Gage Private Wealth Management will design an investment management proposal based solely on an individual’s, family’s, or company’s risk tolerance, objectives, and time horizon. We do not believe in a “one size fits all” approach.</strong></p> 
+                              <p><strong>Dillon Gage Private Wealth Management will design an investment management proposal based solely on an individual’s, family’s, or company’s risk tolerance, objectives, and time horizon. We do not believe in a “one size fits all” approach.</strong></p>
                               <p><strong>Once you become a client, the service is just beginning. We continually monitor your portfolio to ensure the managers are performing at high levels in relation to their respective benchmarks. We monitor the managers to ensure they stay within the investment parameters that were originally outlined. We also maintain contact with our clients to ensure that their individual circumstances have not changed since the relationship was created to ensure maximum client service at all times.</strong></p>
                          </div>
                          <div class="col-md-6">
@@ -194,7 +194,7 @@
                                         <li><a href="about_us.html">About Us</a></li>
                                         <li><a href="services.html">Services</a></li>
                                         <li><a href="dg-companies.html">Dillon Gage Companies</a></li>
-                                        <li><a href="contact.html">Contact</a></li>  
+                                        <li><a href="contact.html">Contact</a></li>
                                    </ul>
                               </div>
                          </div>
@@ -206,13 +206,14 @@
                          <center>
                          <strong>
                          Copyright &copy;2014 Dillon Gage Wealth Management all rights reserved <br>
-                         Before investing in any product, consider your investing goals, time horizon, and risk tolerance, and the product’s investment objectives, options, risks, charges, and expenses. Contact us for the product’s prospectus (or equivalent document) and read it carefully. Past performance is not indicative of future results. There is always a risk of loss when investing in securities. Investment products are not guaranteed or insured by the Federal Deposit Insurance Corporation. The information on this site was drawn from sources considered reliable, but their accuracy and completeness is not guaranteed. We are not responsible for the content of any non-Dillon Gage websites linked to from this website. Nothing on this website may be construed as a recommendation to buy or sell any particular investment product, or as a solicitation of business outside the state of Texas. Fee-based products and services are offered by Dillon Gage Private Wealth Management, a service mark of Dillon Gage Securities, Inc., a registered investment advisor in the state of Texas. Insurance products are offered by Dillon Gage Insurance Servuces Inc., a service mark of Dillon Gage Securities, Inc., an insurance agency in the state of Texas. Brokerage products are offered by Dillon Gage Securities, Inc., a broker-dealer, Member FINRA, SIPC.</strong>
+                         Before investing in any product, consider your investing goals, time horizon, and risk tolerance, and the product’s investment objectives, options, risks, charges, and expenses. Contact us for the product’s prospectus (or equivalent document) and read it carefully. Past performance is not indicative of future results. There is always a risk of loss when investing in securities. Investment products are not guaranteed or insured by the Federal Deposit Insurance Corporation. The information on this site was drawn from sources considered reliable, but their accuracy and completeness is not guaranteed. We are not responsible for the content of any non-Dillon Gage websites linked to from this website. Nothing on this website may be construed as a recommendation to buy or sell any particular investment product, or as a solicitation of business outside the state of Texas. Fee-based products and services are offered by Dillon Gage Private Wealth Management, a service mark of Dillon Gage Securities, Inc., a registered investment advisor in the state of Texas. Insurance products are offered by Dillon Gage Insurance Servuces Inc., a service mark of Dillon Gage Securities, Inc., an insurance agency in the state of Texas. Brokerage products are offered by Dillon Gage Securities, Inc., a broker-dealer, Member <a href="http://www.finra.org/">FINRA</a>, <a href="http://www.sipc.org">SIPC</a>.</strong>
                          </center>
                          </div>
                     </div>
                </div>
           </footer>
      </div>
+
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js" type="text/javascript"></script>
      <script src="js/pace-0.5.1/pace.min.js"></script>
@@ -229,7 +230,7 @@
      <script type="text/javascript" src="js/contact_form.js"></script>
      <script type="text/javascript" src="js/collapser.js"></script>
      <script src="http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.1.3.min.js"></script>
-     
+
 </div>
 </body>
 </html>
